# stm32-zephyr

./: CMakeLists.txt  cmake-variants.yaml
src/: CMakeLists.txt  main.c
